# magic-autorev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  simple_build.sh
src/: debugger.cpp  debugger.h  memstrings.cpp  myproject.cpp  zydisHelper.h
